<resources>
    <string name="app_name">EletricCarApp</string>
    <string name="text_title">Eletric Car</string>
    <string name="cars">Carros</string>
    <string name="favorites">Favoritos</string>
    <string name="price">Preço</string>
    <string name="batery">Bateria</string>
    <string name="power">Potência</string>
    <string name="recharge">Recarga</string>
    <string name="price_kwh">Preço por Kwh</string>
    <string name="traveled_kwh">Km Percorrido</string>
    <string name="button_calculate">Calcular</string>
    <string name="redirect">Redirecionar</string>
    <string name="calcular_autonomia">Calcular Autonomia</string>
    <string name="internet_off">Ops, Internet não disponível</string>
    <string name="response_error">Algo deu errado, por favor tente novamente mais tarde</string>
    <string name="saved_calc">saved_calc</string>

    <array name="array_cidades" >
        <item>Curitiba</item>
        <item>Pinhais</item>
        <item>São José dos Pinahis</item>
        <item>São Paulo</item>
    </array>
</resources>