<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="24dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_star"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/eletric_car"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_price"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <TextView
                android:id="@+id/tv_price_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="R$ 120.000,00"
                app:layout_constraintStart_toEndOf="@id/tv_price"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <TextView
                android:id="@+id/tv_batery"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/batery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_price" />

            <TextView
                android:id="@+id/tv_batery_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="93,4 kWh"
                app:layout_constraintStart_toEndOf="@id/tv_batery"
                app:layout_constraintTop_toTopOf="@id/tv_batery" />

            <TextView
                android:id="@+id/tv_power"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/power"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_batery" />

            <TextView
                android:id="@+id/tv_power_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="646 cv"
                app:layout_constraintStart_toEndOf="@id/tv_power"
                app:layout_constraintTop_toTopOf="@id/tv_power" />

            <TextView
                android:id="@+id/tv_recharge"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/recharge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_power" />

            <TextView
                android:id="@+id/tv_recharge_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="23 min"
                app:layout_constraintBottom_toBottomOf="@id/cl_content"
                app:layout_constraintStart_toEndOf="@id/tv_recharge"
                app:layout_constraintTop_toTopOf="@id/tv_recharge" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>